scripts added and connected, socketio tests working

--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,12 @@
 <html>
 	<head>
 		<title>Hello</title>
+		<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+		<script type="text/javascript" src="javascripts/client.js"></script>
 	</head>
 	<body>
 		<h1>How are you doing?</h1>
+		<span id="testArea">didn't work</span>
 	</body>
 </html>
