--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,12 @@
 		<script type="text/javascript" src="javascripts/client.js"></script>
 	</head>
 	<body>
-		<h1>How are you doing?</h1>
+		<h1>SocketIO Test</h1>
 		<span id="testArea">didn't work</span>
+		<!-- Form where the submission button will serve as a test -->
+		<!-- The reason I made this a form is so that I can adjust it later to add a text box-->
+		<form id="f1">
+			<input type="submit" value="test js">
+		</form>
 	</body>
 </html>
