turned it into a basic instant messenger :speech_balloon: :speech_balloon: also commented out css for now :lipstick: :gun:

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 	<body>
 		<h1>SocketIO Test</h1>
 		<span id="testArea">didn't work</span>
+		<ul id="chatUL"></ul>
 		<!-- Form where the submission button will serve as a test -->
 		<!-- The reason I made this a form is so that I can adjust it later to add a text box-->
 		<form id="f1">
