:octocat: now displays names of everyone connected. Style will come tomorrow. Upset I did not finish before 3 am. I :purple_heart: :octocat:

--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,26 @@
 	</head>
 	<body>
 		<h1>SocketIO Test</h1>
-		<span id="testArea">didn't work</span>
+
+		<!-- Did you connect properly? -->
+		<span id="testArea">NOT connected with SocketIO</span>
+
+		<!-- Form to set a name -->
 		<form id="nameForm">
 			<input type="text" name="name" id="name" placeholder="name">
 			<input type="submit" value="Set Name">
 		</form>
+
+		<!-- Shows all connected Users -->
+		<div id="connectedUsers">
+			<p>Connected Users</p>
+			<ul id="nameList"></ul>
+		</div>
+
+		<!-- The chat list -->
 		<ul id="chatUL"></ul>
-		<!-- Form where the submission button will serve as a test -->
-		<!-- The reason I made this a form is so that I can adjust it later to add a text box-->
+
+		<!-- Message box -->
 		<form id="f1" hidden>
 			<input type="text" name="message" id="message" placeholder="Chat about nothing">
 			<input type="submit" value="test js">
