:octocat: now you can choose a color :rainbow: that will be used to display your name in the chat :moneybag: :money_with_wings: :credit_card: :dollar:

--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
 			<!-- Form to set a name -->
 			<form id="nameForm">
 				<input type="text" name="name" id="name" placeholder="name">
+				Select your color <input type="color" name="dispColor" id="dispColor"> <br>
 				<input type="submit" value="Set Name" class="orange">
 			</form>
 
