:octocat: new error message working properly

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
 				<input type="submit" value="Set Name" class="orange">
 			</form>
 
+			<!-- Error area-->
+			<div id="ErrorArea" hidden>
+				<h3>Error</h3>
+				<span id="errorDescription">Hi</span>
+			</div>
+
 			<!-- Shows all connected Users -->
 			<div id="connectedUsers">
 				<p><span id="connectedSpan">Set name to view connected users</span></p>
